--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="container">
       <div class="card" >
         <h1>Hugo Bach</h1>
-        <img src="images/hugo-bach.png" class="img" width="90px" alt="Hugo B.">
-        <p>
+        <img src="images/hugo-bach.png" class="img"  width="90px" alt="Hugo B.">
+        <p style="padding-bottom: 20px;">
           Etudiant en école de commerce, passioné par la planche à voile et voyager à travers le monde
         </p>
-        <a href="tel:0603900647" class="btn">Me Contacter 📱</a>
+        <a href="tel:0603900637" class="neumorphist neumorphist-button-primary btn">Me Contacter 📱</a>
       </div>
       <div class="card">
         <h2>Voyage ✈️</h2>
