--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="card" >
         <h1>Hugo Bach</h1>
-        <img src="images/hugo-bach.png" class="img"  width="90px" alt="Hugo B.">
+        <img src="/images/hugo-bach.png" class="img"  width="90px" alt="Hugo B.">
         <p style="padding-bottom: 20px;">
           Etudiant en école de commerce, passioné par la planche à voile et voyager à travers le monde
         </p>
